<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_r"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context="com.evoke.central.evokecentral.Registration">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_launcher" />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/accdet"
                android:text="@string/reg"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAlignment="center"
                android:padding="10dp"
                android:textSize="20dp"/>



            <EditText
                android:id="@+id/mRegisterEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_background"
                android:hint="@string/enteremail"
                android:inputType="textEmailAddress"
                android:padding="15dp" />

            <EditText
                android:id="@+id/mRegisterPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_background"
                android:hint="@string/enterpass"
                android:inputType="textPassword"
                android:padding="15dp"/>


            <EditText
                android:id="@+id/mConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_background"
                android:hint="@string/confirmpass"
                android:inputType="textPassword"
                android:padding="15dp" />

            <Button
                android:id="@+id/mRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/blue"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>