<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:id="@+id/thumbnail_image_header"
        android:fitsSystemWindows="true"
        android:scaleType="fitXY" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/NameOfShow"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/showname"
        android:textAlignment="viewStart"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_below="@+id/thumbnail_image_header"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:layout_below="@id/NameOfShow"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Rating"
        android:text="@string/rating"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textAlignment="viewStart"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_below="@+id/name"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ratingofmovie"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:layout_below="@id/Rating"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Description"
        android:text="@string/description"
        android:layout_marginLeft="10dp"
        android:textAlignment="viewStart"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_below="@+id/ratingofmovie"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/descriptionofmovie"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:layout_below="@id/Description"
        android:paddingBottom="20dp"/>


</RelativeLayout>
</ScrollView>